Satic Front End Final

--- a/contact_us.html
+++ b/contact_us.html
@@ -42,7 +42,7 @@
 
                     <div class="navbar-brand">
                         <a href="index.html" class="navbar-logo"><img src="assets/images/logo.png"
-                                                                    alt="Synapse"></a>
+                                                                      alt="Synapse"></a>
                     </div>
 
                 </div>
@@ -58,7 +58,7 @@
                         <li class="nav-item"><a class="nav-link link" href="index.html">HOME</a></li>
                         <li class="nav-item"><a class="nav-link link" href="event.html">EVENTS</a></li>
                         <li class="nav-item"><a class="nav-link link" href="contact_us.html">CONTACT US</a></li>
-                        <li class="nav-item"><a class="nav-link link" href="sponsor.html">SPONSORS</a></li>
+                        <!--<li class="nav-item"><a class="nav-link link" href="sponsor.html">SPONSORS</a></li> -->
                         <li class="nav-item"><a class="nav-link link" href="register.html">REGISTER</a></li>
                     </ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse"
@@ -76,14 +76,15 @@
 
 <section class="engine"><a rel="external" href="https://mobirise.com">top offline site building software</a></section>
 <section class="mbr-section mbr-parallax-background mbr-after-navbar" id="msg-box8-7"
-         style="background-image: url(assets/images/Gallery/17.jpg); padding-top: 160px; padding-bottom: 120px;">
+         style="background-image: url(assets/images/Gallery/12.jpg); padding-top: 160px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
     <div class="container">
         <div class="row">
             <div class="col-md-8 col-md-offset-2 text-xs-center">
-                <h3 class="mbr-section-title display-2 heading_white"><span style="font-weight: normal;">MEET OUR TEAM</span></h3>
+                <h3 class="mbr-section-title display-2 heading_white"><span
+                        style="font-weight: normal;">MEET OUR TEAM</span></h3>
                 <div class="lead">
                     <ul>
                         <li></li>
@@ -125,11 +126,11 @@
             </div>
         </div>
         <div class="col-lg-4">
-            <img src="assets/images/Committee%20Images/Khushbu.jpg" alt="Name" width="200" height="200">
+            <img src="assets/images/Committee%20Images/Jay.jpeg" alt="Name" width="200" height="200">
             <div class="name padding">
-                <h5 class="name_head">Khushbu Patel</h5>
+                <h5 class="name_head">Jay Hariyani</h5>
                 <h5>Mentor</h5>
-                <p class="margin">+91-9408055159</p>
+                <p class="margin">+91 8000777857</p>
             </div>
         </div>
     </div>
@@ -160,14 +161,7 @@
         </div>
     </div>
     <div class="row padding">
-        <div class="col-lg-4">
-            <img src="assets/images/Committee%20Images/Udit.jpg" alt="Name" width="200" height="200">
-            <div class="name padding">
-                <h5 class="name_head">Udit Amreliya</h5>
-                <h5>Sponsorship</h5>
-                <p class="margin">+91-7567107717</p>
-            </div>
-        </div>
+
         <div class="col-lg-4">
             <img src="assets/images/Committee%20Images/Chirang.jpg" alt="Name" width="200" height="200">
             <div class="name padding">
@@ -177,21 +171,29 @@
             </div>
         </div>
         <div class="col-lg-4">
-            <img src="assets/images/Committee%20Images/Romil.jpg" alt="Name" width="200" height="200">
-            <div class="name padding">
-                <h5 class="name_head">Romil Shah</h5>
-                <h5>Sponsorship</h5>
-                <p class="margin">+91-9427217688</p>
-            </div>
-        </div>
-    </div>
-    <div class="row padding">
-        <div class="col-lg-3">
             <img src="assets/images/Committee%20Images/Kajal.jpg" alt="Name" width="200" height="200">
             <div class="name padding">
                 <h5 class="name_head">Kajal Gosaliya</h5>
                 <h5>Marketing</h5>
                 <p class="margin">+91-8155945859</p>
+            </div>
+        </div>
+        <div class="col-lg-4">
+            <img src="assets/images/Committee%20Images/Mukul.jpg" alt="Name" width="200" height="200">
+            <div class="name padding">
+                <h5 class="name_head">Mukul Joshi</h5>
+                <h5>Design and Digital Marketing</h5>
+                <p class="margin">+91-8800200004</p>
+            </div>
+        </div>
+    </div>
+    <div class="row padding">
+        <div class="col-lg-3">
+            <img src="assets/images/Committee%20Images/Romil.jpg" alt="Name" width="200" height="200">
+            <div class="name padding">
+                <h5 class="name_head">Romil Shah</h5>
+                <h5>Sponsorship</h5>
+                <p class="margin">+91-9427217688</p>
             </div>
         </div>
         <div class="col-lg-3">
@@ -211,11 +213,11 @@
             </div>
         </div>
         <div class="col-lg-3">
-            <img src="assets/images/Committee%20Images/Mukul.jpg" alt="Name" width="200" height="200">
+            <img src="assets/images/Committee%20Images/Udit.jpg" alt="Name" width="200" height="200">
             <div class="name padding">
-                <h5 class="name_head">Mukul Joshi</h5>
-                <h5>Marketing and Design</h5>
-                <p class="margin">+91-8800200004</p>
+                <h5 class="name_head">Udit Amreliya</h5>
+                <h5>Sponsorship</h5>
+                <p class="margin">+91-7567107717</p>
             </div>
         </div>
     </div>
@@ -225,9 +227,10 @@
         <div class="row">
             <div class="col-lg-6 col-md-12">
                 <a class="footer-link" href="Campus_Ambassador.html">CAMPUS AMBASSADOR</a>
-                <a class="footer-link" href="#">TRAILER</a>
                 <a class="footer-link"
-                   href="https://drive.google.com/file/d/0BxO7yBkG1U5RV21TbGxCQi03UWs/view">BROCHURE</a>
+                   href="https://drive.google.com/file/d/0B0dt8eWTvob6UlNuS3FwT2VsR28/view">TRAILER</a>
+                <a class="footer-link"
+                   href="https://drive.google.com/open?id=0B0dt8eWTvob6SmY1am9NeDJCSzQ">BROCHURE</a>
                 <a class="footer-link" href="youth_run.html">YOUTH RUN</a>
                 <a class="footer-link" href="gallery.html">GALLERY</a>
             </div>
