--- a/event.html
+++ b/event.html
@@ -57,7 +57,7 @@
                         <li class="nav-item"><a class="nav-link link" href="index.html">HOME</a></li>
                         <li class="nav-item"><a class="nav-link link" href="event.html">EVENTS</a></li>
                         <li class="nav-item"><a class="nav-link link" href="contact_us.html">CONTACT US</a></li>
-                        <li class="nav-item"><a class="nav-link link" href="sponsor.html">SPONSORS</a></li>
+                        <!--<li class="nav-item"><a class="nav-link link" href="sponsor.html">SPONSORS</a></li> -->
                         <li class="nav-item"><a class="nav-link link" href="register.html">REGISTER</a></li>
                     </ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse"
@@ -97,7 +97,7 @@
 </section>
 
 <div class="extra-large-padding">
-    <h1 class="heading padding" style="color: black;">PRO NIGHTS</h1>
+    <h1 class="heading padding" style="color: black;">PRONITES</h1>
     <hr class="under_head">
     <br>
     <div class="row">
@@ -106,7 +106,7 @@
                  width="100%">
             <div class="name padding">
                 <h4 class="name_head">CYNOSURE</h4>
-                <p>Pro Night</p>
+                <p>PRONITES</p>
             </div>
         </div>
         <div class="col-lg-6 padding">
@@ -114,7 +114,7 @@
                  width="100%">
             <div class="name padding">
                 <h4 class="name_head">RAGNA ROCK</h4>
-                <p>Pro Night</p>
+                <p>PRONITES</p>
             </div>
         </div>
     </div>
@@ -123,7 +123,7 @@
             <img src="assets/images/Gallery/2.jpg" alt="EDM NIGHT" data-toggle="modal" data-target="#EDM" width="100%">
             <div class="name padding">
                 <h4 class="name_head">EDM NIGHT</h4>
-                <p>Pro Night</p>
+                <p>PRONITES</p>
             </div>
         </div>
         <div class="col-lg-6 padding">
@@ -131,7 +131,7 @@
                  width="100%">
             <div class="name padding">
                 <h4 class="name_head">INAGURAL</h4>
-                <p>Pro Night</p>
+                <p>PRONITES</p>
             </div>
         </div>
     </div>
@@ -252,7 +252,8 @@
             </div>
         </div>
         <div class="col-lg-4 padding">
-            <img src="assets/images/Event/Rekriti.jpg" alt="REKRITI" data-toggle="modal" data-target="#rekriti"
+            <img src="assets/images/new_cover/Synocubix.jpg" style="height: 240px;" alt="REKRITI" data-toggle="modal"
+                 data-target="#rekriti"
                  width="100%">
             <div class="name padding">
                 <h4 class="name_head">SYNOCUBIX OPEN 2017</h4>
@@ -317,7 +318,7 @@
                             a good one when you have the best impressionists and comedians on stage. Double up laughing
                             along with Biswa Kalyan Rath, The Viral Fever, East India Comedy and Revadio.</p>
                     </div>
-                    <a type="button" class="btn btn-secondary" href="#">BUY PASS</a>
+                    <!--<a type="button" class="btn btn-secondary" href="#">BUY PASS</a>-->
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                 </div>
             </div>
@@ -346,6 +347,15 @@
                             Welcome to Rampage 2017. Think bold, think sharp, think contrasts. <br>
                             Theme: <b>"50 Shades of.."</b><br>
                         </p>
+                        <h3 class="heading2">EVENT FORMAT</h3>
+                        <p class="lead min_padding2">
+                            Team Event<br>
+                            Individual Participation
+                        </p>
+                        <h3 class="heading2">TEAM EVENT</h3>
+                        <hr class="under_head">
+                        <br>
+                        <p class="lead min_padding2">
                         <h3 class="heading2">PRELIMS</h3>
                         <p class="lead min_padding2">In case of time constraints and more registrations, there will be
                             prelims for registered teams. Further details regarding this will be posted on
@@ -438,6 +448,33 @@
                             </li>
                         </ul>
                         <br>
+                        <h3 class="heading2">INDIVIDUAL PARTICIPATION</h3>
+                        <hr class="under_head">
+                        <br>
+                        <h3 class="heading2">PRELIMS</h3>
+                        <p class="lead min_padding2">In case of time constraints and more registrations, there will be
+                            prelims for registered participants. Further details regarding this will be posted on
+                            synapse.daiict.ac.in
+                        </p>
+                        <h3 class="heading2">Finale</h3>
+                        <ul class="lead min_padding" style="text-align:left;">
+                            <li>Main Round will be held on 24th February 2016. This would be between the short-listed
+                                models from the Preliminary round.
+                            </li>
+                            <li>Time Limit: Not exceeding 3 min
+                            </li>
+                            <li>Team Size: Only 1 model
+                            </li>
+                        </ul>
+                        <h3 class="heading2">Judgment Criteria</h3>
+                        <ul class="lead min_padding" style="text-align:left;">
+                            <li>Walk and poise
+                            </li>
+                            <li>Confidence and gesture of the model
+                            </li>
+                            <li>Overall impact on the judges and crowd.
+                            </li>
+                        </ul>
                         <h5>In case of any ambiguity the coordinators’ decisions will be final.
                         </h5><br>
                         <h5>Bring College ID of each of the team members without fail.
@@ -482,7 +519,7 @@
                             Providence, Demonic Resurrection, Bhayanak Maut, Undying Inc. and more.
                         </p>
                     </div>
-                    <a type="button" class="btn btn-secondary" href="#">BUY PASS</a>
+                    <!--<a type="button" class="btn btn-secondary" href="#">BUY PASS</a>-->
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                 </div>
             </div>
@@ -512,7 +549,7 @@
                             music. Celebrate the non-stop mixes of Sunburn and VH1 Supersonic.
                         </p>
                     </div>
-                    <a type="button" class="btn btn-secondary" href="#">BUY PASS</a>
+                    <!--<a type="button" class="btn btn-secondary" href="#">BUY PASS</a>-->
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                 </div>
             </div>
@@ -544,7 +581,7 @@
                             Ocean, Tochi Raina and many more, keep a look out for who's next.
                         </p>
                     </div>
-                    <a type="button" class="btn btn-secondary" href="#">BUY PASS</a>
+                    <!--<a type="button" class="btn btn-secondary" href="#">BUY PASS</a>-->
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                 </div>
             </div>
@@ -568,9 +605,6 @@
                         <hr class="under_head">
                         <br>
                         <div class="container large-padding">
-                            <h2 class="heading padding">DESCRIPTION</h2>
-                            <hr class="under_head">
-                            <br>
                             <p class="lead min_padding">“Nobody cares if you can't dance well. Just get up and dance.
                                 Great dancers are great because of their passion.”
                                 ― Martha Graham</p>
@@ -639,7 +673,7 @@
                                     <ul>
                                         <li>Solo: Time limit: 5 minutes (including setup)</li>
                                         <li>Dance Duo: Time limit: 6 minutes (including setup)</li>
-                                        <li>Group: Team size for group category : 5-12  <br>
+                                        <li>Group: Team size for group category : 8-15 <br>
                                             Time Limit : 9 minutes (including setup)
                                         </li>
                                     </ul>
@@ -979,17 +1013,17 @@
                         <ul class="lead min_padding" style="text-align:left;">
                             <li>There are no participation charges.
                             </li>
-                            <li>Time duration for performances:
+                            <li>Time duration for performances: (Maximum Time Limit)
                                 <ul>
-                                    <li>Solo.....4-5 Minutes</li>
-                                    <li>Duet.....5-7 Minutes</li>
-                                    <li>Group....8-10 Minutes</li>
+                                    <li>Solo.....5 Minutes</li>
+                                    <li>Duet.....7 Minutes</li>
+                                    <li>Group....10 Minutes</li>
                                 </ul>
                             </li>
                             <li>There is no restriction on the song as long as the dance forms are classical, semi
                                 classical, or folk
                             </li>
-                            <li>For group performance maximum size of each group is 12.</li>
+                            <li>For group performance maximum size of each group is 15 (Maximum).</li>
                             <li>Depending on number of participants there may be a preliminary round of which
                                 participants will be informed in advance.
                             </li>
@@ -1041,7 +1075,8 @@
                         </ul>
                         <h3 class="heading2">CONTACT</h3>
                         <p class="lead min_padding">
-
+                            Prithvi Patel : 7359084811<br>
+                            Brinda Jena : 7227895355
                         </p>
                     </div>
                     <a type="button" class="btn btn-secondary" href="register.html">Register</a>
@@ -1233,7 +1268,7 @@
                             </p>
                         </div>
                     </div>
-                    <a type="button" class="btn btn-secondary" href="register.html">Register</a>
+                    <a type="button" class="btn btn-secondary" href="https://www.tinyurl.com/senate2017" target="_blank">Register</a>
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                 </div>
             </div>
@@ -1861,7 +1896,7 @@
             </div>
         </div>
     </div>
-    <!-- Rekriti -->
+    <!-- CUBE -->
     <div class="modal fade" id="rekriti" role="dialog">
         <div class="modal-dialog">
 
@@ -1930,6 +1965,8 @@
                         </p>
                         <h3 class="heading2">CONTACT</h3>
                         <p class="lead min_padding">
+                            Vaidehi Khalpada : 8980203370<br>
+                            Krishna Parekh : 9979632570
                         </p>
                         <br>
                         <h5>Registration will be on the spot.</h5>
@@ -2321,9 +2358,10 @@
         <div class="row">
             <div class="col-lg-6 col-md-12">
                 <a class="footer-link" href="Campus_Ambassador.html">CAMPUS AMBASSADOR</a>
-                <a class="footer-link" href="#">TRAILER</a>
                 <a class="footer-link"
-                   href="https://drive.google.com/file/d/0BxO7yBkG1U5RV21TbGxCQi03UWs/view">BROCHURE</a>
+                   href="https://drive.google.com/file/d/0B0dt8eWTvob6UlNuS3FwT2VsR28/view">TRAILER</a>
+                <a class="footer-link"
+                   href="https://drive.google.com/open?id=0B0dt8eWTvob6SmY1am9NeDJCSzQ">BROCHURE</a>
                 <a class="footer-link" href="youth_run.html">YOUTH RUN</a>
                 <a class="footer-link" href="gallery.html">GALLERY</a>
             </div>
