--- a/gallery.html
+++ b/gallery.html
@@ -56,7 +56,7 @@
                         <li class="nav-item"><a class="nav-link link" href="index.html">HOME</a></li>
                         <li class="nav-item"><a class="nav-link link" href="event.html">EVENTS</a></li>
                         <li class="nav-item"><a class="nav-link link" href="contact_us.html">CONTACT US</a></li>
-                        <li class="nav-item"><a class="nav-link link" href="sponsor.html">SPONSORS</a></li>
+                        <!--<li class="nav-item"><a class="nav-link link" href="sponsor.html">SPONSORS</a></li>-->
                         <li class="nav-item"><a class="nav-link link" href="register.html">REGISTER</a></li>
                     </ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse"
@@ -75,7 +75,7 @@
 <section class="engine"><a rel="external" href="https://mobirise.com">easy html site creator software download</a>
 </section>
 <section class="mbr-section mbr-parallax-background mbr-after-navbar" id="msg-box8-7"
-         style="background-image: url(assets/images/Gallery/12.jpg); padding-top: 160px; padding-bottom: 120px;">
+         style="background-image: url(assets/images/Gallery/6.jpg); padding-top: 160px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0; background-color: rgb(34, 34, 34);">
     </div>
@@ -450,9 +450,10 @@
         <div class="row">
             <div class="col-lg-6 col-md-12">
                 <a class="footer-link" href="Campus_Ambassador.html">CAMPUS AMBASSADOR</a>
-                <a class="footer-link" href="#">TRAILER</a>
                 <a class="footer-link"
-                   href="https://drive.google.com/file/d/0BxO7yBkG1U5RV21TbGxCQi03UWs/view">BROCHURE</a>
+                   href="https://drive.google.com/file/d/0B0dt8eWTvob6UlNuS3FwT2VsR28/view">TRAILER</a>
+                <a class="footer-link"
+                   href="https://drive.google.com/open?id=0B0dt8eWTvob6SmY1am9NeDJCSzQ">BROCHURE</a>
                 <a class="footer-link" href="youth_run.html">YOUTH RUN</a>
                 <a class="footer-link" href="gallery.html">GALLERY</a>
             </div>
