--- a/login.html
+++ b/login.html
@@ -58,7 +58,7 @@
                         <li class="nav-item"><a class="nav-link link" href="index.html">HOME</a></li>
                         <li class="nav-item"><a class="nav-link link" href="event.html">EVENTS</a></li>
                         <li class="nav-item"><a class="nav-link link" href="contact_us.html">CONTACT US</a></li>
-                        <li class="nav-item"><a class="nav-link link" href="sponsor.html">SPONSORS</a></li>
+                        <!--<li class="nav-item"><a class="nav-link link" href="sponsor.html">SPONSORS</a></li> -->
                         <li class="nav-item"><a class="nav-link link" href="register.html">REGISTER</a></li>
                     </ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse"
@@ -76,7 +76,7 @@
 
 <section class="engine"><a rel="external" href="https://mobirise.com">top offline site building software</a></section>
 <section class="mbr-section mbr-parallax-background mbr-after-navbar" id="msg-box8-7"
-         style="background-image: url(assets/images/Gallery/17.jpg); padding-top: 160px; padding-bottom: 120px;">
+         style="background-image: url(assets/images/Gallery/14.jpg); padding-top: 160px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -109,9 +109,12 @@
             </div>
             <br>
             <div class="text-danger" ng-if='error' style="text-align:center; padding: 20px;">
-              {{error}}
+                {{error}}
             </div>
-            <button type="button" style="width: 200px;" class="btn btn-primary center-block" ng-disabled='loading' ng-click='login()'>Login</button><br>
+            <button type="button" style="width: 200px;" class="btn btn-primary center-block" ng-disabled='loading'
+                    ng-click='login()'>Login
+            </button>
+            <br>
             <p style="text-align: center;">If you have not Registered, <a href="register.html">Register</a></p>
         </form>
     </div>
@@ -121,9 +124,10 @@
         <div class="row">
             <div class="col-lg-6 col-md-12">
                 <a class="footer-link" href="Campus_Ambassador.html">CAMPUS AMBASSADOR</a>
-                <a class="footer-link" href="#">TRAILER</a>
                 <a class="footer-link"
-                   href="https://drive.google.com/file/d/0BxO7yBkG1U5RV21TbGxCQi03UWs/view">BROCHURE</a>
+                   href="https://drive.google.com/file/d/0B0dt8eWTvob6UlNuS3FwT2VsR28/view">TRAILER</a>
+                <a class="footer-link"
+                   href="https://drive.google.com/open?id=0B0dt8eWTvob6SmY1am9NeDJCSzQ">BROCHURE</a>
                 <a class="footer-link" href="youth_run.html">YOUTH RUN</a>
                 <a class="footer-link" href="gallery.html">GALLERY</a>
             </div>
@@ -169,15 +173,15 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angularFire/2.3.0/angularfire.min.js" charset="utf-8"></script>
 <script src="https://www.gstatic.com/firebasejs/3.6.7/firebase.js"></script>
 <script>
-  // Initialize Firebase
-  var config = {
-    apiKey: "AIzaSyC6p0APHD1XjE7HbDhV3aWg0Eqo4RbLXjk",
-    authDomain: "synapse-2aadf.firebaseapp.com",
-    databaseURL: "https://synapse-2aadf.firebaseio.com",
-    storageBucket: "synapse-2aadf.appspot.com",
-    messagingSenderId: "87001485842"
-  };
-  firebase.initializeApp(config);
+    // Initialize Firebase
+    var config = {
+        apiKey: "AIzaSyC6p0APHD1XjE7HbDhV3aWg0Eqo4RbLXjk",
+        authDomain: "synapse-2aadf.firebaseapp.com",
+        databaseURL: "https://synapse-2aadf.firebaseio.com",
+        storageBucket: "synapse-2aadf.appspot.com",
+        messagingSenderId: "87001485842"
+    };
+    firebase.initializeApp(config);
 </script>
 
 <script src="assets/Javascript/app.js" charset="utf-8"></script>
