--- a/sponsor.html
+++ b/sponsor.html
@@ -97,16 +97,20 @@
 
 </section>
 <div class="container">
-
+    <h1 class="heading padding" style="color: black;">SPONSORS</h1>
+    <hr class="under_head">
+    <br>
+    <img src="assets/images/Cover/1.jpg" style="width: 100%;margin-bottom: 30px;">
 </div>
 <div class="footer1" style="text-align: left;">
     <div class="container-fluid" style="margin-left: -25px;">
         <div class="row">
             <div class="col-lg-6 col-md-12">
                 <a class="footer-link" href="Campus_Ambassador.html">CAMPUS AMBASSADOR</a>
-                <a class="footer-link" href="#">TRAILER</a>
                 <a class="footer-link"
-                   href="https://drive.google.com/file/d/0BxO7yBkG1U5RV21TbGxCQi03UWs/view">BROCHURE</a>
+                   href="https://drive.google.com/file/d/0B0dt8eWTvob6UlNuS3FwT2VsR28/view">TRAILER</a>
+                <a class="footer-link"
+                   href="https://drive.google.com/open?id=0B0dt8eWTvob6SmY1am9NeDJCSzQ">BROCHURE</a>
                 <a class="footer-link" href="youth_run.html">YOUTH RUN</a>
                 <a class="footer-link" href="gallery.html">GALLERY</a>
             </div>
