--- a/youth_run.html
+++ b/youth_run.html
@@ -58,7 +58,7 @@
                         <li class="nav-item"><a class="nav-link link" href="index.html">HOME</a></li>
                         <li class="nav-item"><a class="nav-link link" href="event.html">EVENTS</a></li>
                         <li class="nav-item"><a class="nav-link link" href="contact_us.html">CONTACT US</a></li>
-                        <li class="nav-item"><a class="nav-link link" href="sponsor.html">SPONSORS</a></li>
+                        <!--<li class="nav-item"><a class="nav-link link" href="sponsor.html">SPONSORS</a></li>-->
                         <li class="nav-item"><a class="nav-link link" href="register.html">REGISTER</a></li>
                     </ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse"
@@ -347,9 +347,10 @@
         <div class="row">
             <div class="col-lg-6 col-md-12">
                 <a class="footer-link" href="Campus_Ambassador.html">CAMPUS AMBASSADOR</a>
-                <a class="footer-link" href="#">TRAILER</a>
                 <a class="footer-link"
-                   href="https://drive.google.com/file/d/0BxO7yBkG1U5RV21TbGxCQi03UWs/view">BROCHURE</a>
+                   href="https://drive.google.com/file/d/0B0dt8eWTvob6UlNuS3FwT2VsR28/view">TRAILER</a>
+                <a class="footer-link"
+                   href="https://drive.google.com/open?id=0B0dt8eWTvob6SmY1am9NeDJCSzQ">BROCHURE</a>
                 <a class="footer-link" href="youth_run.html">YOUTH RUN</a>
                 <a class="footer-link" href="gallery.html">GALLERY</a>
             </div>
